METRON-119 - Move PCAP infrastructure from HBase closes apache/incubator-metron#93